[workspace]
resolver = "2"
members = [
    "sufur-core",
    "sufur-platform",
    "sufur-linux",
    "sufur-macos",
    "sufur-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.74"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
# Serialization (JSON / NDJSON output, job files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async streams (Platform::watch_devices hotplug)
futures = "0.3"
# CLI
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
# Testing (fixture dirs)
tempfile = "3"
# libudev bindings (optional, feature-gated in sufur-linux)
udev = "0.9"
# GPT partition table manipulation
gptman = { version = "3", default-features = false }
# UUID generation for disk/partition GUIDs
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
