[package]
name = "sufur-linux"
description = "Linux platform implementation for Sufur (udev, libfdisk, mount)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sufur-platform = { path = "../sufur-platform" }
thiserror.workspace = true
futures.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
udev = { workspace = true, optional = true }

[features]
default = ["udev"]
udev = ["dep:udev"]

[dev-dependencies]
tempfile.workspace = true
