[package]
name = "sufur-macos"
description = "macOS platform implementation for Sufur (IOKit, DiskArbitration)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sufur-platform = { path = "../sufur-platform" }
thiserror.workspace = true
futures.workspace = true

# macOS-only IOKit / CoreFoundation / DiskArbitration bindings.
# Target-gated so `cargo build` on Linux does not fetch them.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-io-kit = { version = "0.3.2", features = [
    "libc",
    "usb",
    "USB",
    "AppleUSBDefinitions",
    "IOUSBLib",
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "CFDictionary",
    "CFString",
    "CFNumber",
    "CFUUID",
    "CFPlugInCOM",
    "CFRunLoop",
] }
objc2-disk-arbitration = "0.3.2"
dispatch2 = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
